array.island.Island.scala.error
Compilation error:
Island:4: error: not found: value Stack
  var niveaux = Stack[Int]()
                ^